# job-application-agent

./: .env.example  .gitignore  README.md  config.json  cover_letter.py  engine.py  generate_variant.py  gmail_mcp_helper.py  jobs.csv  orchestrator.py  preview.py  preview_followup.py  program.md  requirements.txt  results.tsv  scraper.py  state.json  variants.json
.github/workflows/: job-engine.yml
core/: cover_letter.py  email_client.py
email-outreach-optimizer/: .env.example  .gitignore  README.md  engine.py  orchestrator.py  pyproject.toml  variants.json
email-outreach-optimizer/.github/workflows/: optimize.yml
email-outreach-optimizer/core/: email_client.py  generate_variant.py
email-outreach-optimizer/utils/: demo.py
job_descriptions/: job_001.txt  job_002.txt  job_003.txt  job_004.txt  job_005.txt  job_006.txt  job_007.txt  job_008.txt  job_009.txt  job_010.txt  job_011.txt  job_012.txt  job_013.txt  job_014.txt  job_015.txt  job_016.txt
scrapers/: find_hr_emails.py  linkedin_scraper.py  score_and_enrich.py  scrape_ncs_hr.py  scrape_only.py  scraper.py
utils/: preview.py  preview_followup.py
